# meeseeks-box

./: .gitignore  .style.yapf  README.md  backends.py  code.py  config.py  custom_logging.py  discussion.txt  fancy_con  fancy_print.py  gpt_ping  gpt_presets.json  install.sh  parser.py  pyproject.toml  temp.txt  test.md  test.py
ressources/: action_types.txt  gpt_style.json  presets.json  style.json
scripts/: backends.py  code.py  config.py  custom_logging.py  fancy_print.py  gpt_functions.py  gpt_ping.py  parser.py  spinner.py  test.py
