[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["AmdaUwU <jbat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
requests = "^2.28.2"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
