[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["AmdaUwU <jbat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
requests = "^2.28.2"
openai = "^0.27.4"
loguru = "^0.7.0"
toml = "^0.10.2"
prompt-toolkit = "^3.0.38"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
