[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["AmdaUwU <jbat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.2"
requests = "2.28.2"
openai = "0.27.4"
loguru = "0.7.0"
prompt-toolkit = "3.0.43"
#tiktoken = "0.4"
duckduckgo-search = "^3.8.3"
matplotlib = "3.5"
pylatexenc = "2.10"
colorama = "0.4.6"
bs4 = "^0.0.1"
frozenlist = "1.4.1"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
yapf = "^0.32.0"
pipdeptree = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
